<resources>
    <string name="app_name">CineShared</string>
    <string name="navegacion_abrir">Abrir menú navegación</string>
    <string name="navegacion_cerrar">Cerrar menú navegación</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="configuracion">Configuración</string>
    <string name="error_field_required">Campo obligatorio</string>
    <string name="title_activity_buscar_peliculas">BuscarPeliculas</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="telefono">Teléfono</string>
    <string name="distancia_maxima">Distancia Máxima</string>
    <string name="escribe_un_mensaje">Escribe un mensaje...</string>
    <string name="subir_imagen">Subir Imagen</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="ultimo_mensaje">Último mensaje</string>
    <string name="hora_defecto">00:00</string>
    <string name="texto_chat">Texto Chat</string>
    <string name="resumen_peliculas_a_intercambiar">Resumen peliculas a intercambiar</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="chat">Chat</string>
</resources>
