<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mensaje_chat_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/fondo_mensaje_chat"
    android:padding="10dp"
    android:weightSum="10">

    <TextView
        android:id="@+id/texto_mensaje_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nombre_mensaje_chat"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="0dp"
        android:text="@string/texto_chat"
        android:textColor="#444444"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/nombre_mensaje_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:text="@string/nombre_usuario"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hora_mensaje_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nombre_mensaje_chat"
        android:layout_alignBottom="@+id/nombre_mensaje_chat"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:text="@string/hora_defecto"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

</RelativeLayout>